hphp/test/zend/bad/ext/standard/tests/file/bug41874_2.php
<?php
$result = exec('cd 1:\\non_existent; dir nonexistent');
echo "$result";
?>